fix: all function now is working good
